@@ -1,25 +1,27 @@
 package com.teamtiger.travelbookingsys.services;
 
-import com.teamtiger.travelbookingsys.exceptions.TravelPackageNotFoundException;
+import com.teamtiger.travelbookingsys.exceptions.travelPackage.TravelPackageNotFoundException;
+import com.teamtiger.travelbookingsys.models.dtos.BookingDTO;
+import com.teamtiger.travelbookingsys.models.dtos.DetailedTravelPackageDTO;
 import com.teamtiger.travelbookingsys.models.dtos.TravelPackageDTO;
+import com.teamtiger.travelbookingsys.models.entities.Booking;
 import com.teamtiger.travelbookingsys.models.entities.TravelPackage;
+import com.teamtiger.travelbookingsys.repositories.BookingRepository;
 import com.teamtiger.travelbookingsys.repositories.TravelPackageRepository;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
+@RequiredArgsConstructor
 public class TravelPackageServiceImpl implements TravelPackageService {
     private final TravelPackageRepository travelPackageRepository;
-    private final ModelMapper modelMapper;
-
-    public TravelPackageServiceImpl(TravelPackageRepository travelPackageRepository, ModelMapper modelMapper) {
-        this.travelPackageRepository = travelPackageRepository;
-        this.modelMapper = modelMapper;
-    }
+    private final BookingRepository bookingRepository;
 
     @Override
     public TravelPackageDTO createTravelPackage(TravelPackageDTO travelPackageDTO) {
@@ -32,10 +34,12 @@ public class TravelPackageServiceImpl implements TravelPackageService {
     }
 
     @Override
-    public List<TravelPackageDTO> getAllTravelPackages() {
-        return travelPackageRepository.findAll().stream()
-                .map(travelPackage -> modelMapper.map(travelPackage, TravelPackageDTO.class))
-                .toList();
+    public List<DetailedTravelPackageDTO> getAllTravelPackages() {
+        List<TravelPackage> travelPackages = travelPackageRepository.findAll();
+
+        return travelPackages.stream()
+                .map(this::convertEntityToDetailedDTO)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -75,5 +79,33 @@ public class TravelPackageServiceImpl implements TravelPackageService {
         travelPackageResponseDTO.setDuration(travelPackage.getDuration());
         travelPackageResponseDTO.setPrice(travelPackage.getPrice());
         return travelPackageResponseDTO;
+    }
+
+
+    private DetailedTravelPackageDTO convertEntityToDetailedDTO(TravelPackage travelPackage) {
+        DetailedTravelPackageDTO detailedDTO = new DetailedTravelPackageDTO();
+        detailedDTO.setId(travelPackage.getId());
+        detailedDTO.setPackageName(travelPackage.getPackageName());
+        detailedDTO.setDescription(travelPackage.getDescription());
+        detailedDTO.setDestination(travelPackage.getDestination());
+        detailedDTO.setDuration(travelPackage.getDuration());
+        detailedDTO.setPrice(travelPackage.getPrice());
+
+        List<BookingDTO> bookings = bookingRepository.findByTravelPackage(travelPackage)
+                .stream()
+                .map(this::convertBookingEntityToDTO)
+                .collect(Collectors.toList());
+
+        detailedDTO.setBookings(bookings);
+        return detailedDTO;
+    }
+
+    private BookingDTO convertBookingEntityToDTO(Booking booking) {
+        BookingDTO bookingDTO = new BookingDTO();
+        bookingDTO.setId(booking.getId());
+        bookingDTO.setDate(booking.getDate());
+        bookingDTO.setAvailableSpots(booking.getAvailableSpots());
+        bookingDTO.setTravelPackageId(booking.getTravelPackage().getId());
+        return bookingDTO;
     }
 }
